@@ -1,6 +1,6 @@
 package com.sixb.note.api.service;
 
-import com.sixb.note.dto.Like.LikeResponseDto;
+import com.sixb.note.dto.like.LikeResponseDto;
 import com.sixb.note.entity.Folder;
 import com.sixb.note.entity.Note;
 import com.sixb.note.entity.Page;
@@ -14,7 +14,6 @@ import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 
 import java.util.*;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -37,17 +36,11 @@ public class LikeService {
 
 	// 즐겨찾기 추가/삭제
 	private void modifyLike(long userId, String itemId, boolean isAdding) throws NotFoundException {
-		User user = userRepository.findUserById(userId);
+		User user = userRepository.findUserById(userId)
+				.orElseThrow(() -> new NotFoundException("존재하지 않는 유저입니다."));
 
-		if (user == null) {
-			throw new NotFoundException("존재하지 않는 유저입니다.");
-		}
-
-		Object item = findItemById(itemId);
-
-		if (item == null) {
-			throw new NotFoundException("존재하지 않는 아이템입니다.");
-		}
+		Object item = findItemById(itemId)
+				.orElseThrow(() -> new NotFoundException("존재하지 않는 아이템입니다."));
 
 		if (isAdding) {
 			addItemToUser(user, item);
@@ -57,7 +50,7 @@ public class LikeService {
 		}
 	}
 
-	private Object findItemById(String itemId) {
+	private Optional<?> findItemById(String itemId) {
 		return switch (itemId.charAt(0)) {
 			case 'f' -> folderRepository.findFolderById(itemId);
 			case 'n' -> noteRepository.findNoteById(itemId);
@@ -67,12 +60,14 @@ public class LikeService {
 	}
 
 	private void addItemToUser(User user, Object item) {
-		if (item instanceof Folder) {
-			user.getFolders().add((Folder) item);
-		} else if (item instanceof Note) {
-			user.getNotes().add((Note) item);
-		} else if (item instanceof Page) {
-			user.getPages().add((Page) item);
+		if (item instanceof Folder folder) {
+			user.getFolders().add(folder);
+		} else if (item instanceof Note note) {
+			user.getNotes().add(note);
+		} else if (item instanceof Page page) {
+			user.getPages().add(page);
+		} else {
+			throw new IllegalArgumentException("잘못된 요청입니다.");
 		}
 	}
 
@@ -94,19 +89,44 @@ public class LikeService {
 		List<Note> likedNotes = noteRepository.findAllLikedNotesByUserId(userId);
 		List<Page> likedPages = pageRepository.findAllLikedPagesByUserId(userId);
 
-		List<LikeResponseDto.FolderInfo> folderInfos = likedFolders.stream().map(folder -> {
-			String rootFolderId = folderRepository.findRootFolderByFolderId(folder.getFolderId());
-			LikeResponseDto.FolderInfo folderInfo = new LikeResponseDto.FolderInfo();
-			folderInfo.setSpaceTitle(folder.getSpaceId());
-			folderInfo.setFolderId(folder.getFolderId());
-			folderInfo.setRootFolderId(rootFolderId);
-			folderInfo.setTitle(folder.getTitle());
-			folderInfo.setUpdatedAt(folder.getUpdatedAt());
-			folderInfo.setCreatedAt(folder.getCreatedAt());
-			return folderInfo;
-		}).collect(Collectors.toList());
+		List<LikeResponseDto.FolderInfo> folderInfos = likedFolders.stream()
+				.map(folder -> LikeResponseDto.FolderInfo.builder()
+						.folderId(folder.getFolderId())
+						.rootFolderId(folderRepository.findRootFolderByFolderId(folder.getFolderId()))
+						.spaceId(folder.getSpaceId())
+						.title(folder.getTitle())
+						.createdAt(folder.getCreatedAt())
+						.updatedAt(folder.getUpdatedAt())
+						.build())
+				.toList();
 
-		return new LikeResponseDto(folderInfos, likedNotes, likedPages);
+		List<LikeResponseDto.NoteInfo> noteInfos = likedNotes.stream()
+				.map(note -> LikeResponseDto.NoteInfo.builder()
+						.noteId(note.getNoteId())
+						.spaceId(note.getSpaceId())
+						.title(note.getTitle())
+						.totalPageCnt(note.getTotalPageCnt())
+						.createdAt(note.getCreatedAt())
+						.updatedAt(note.getUpdatedAt())
+						.build())
+				.toList();
+
+		List<LikeResponseDto.PageInfo> pageInfos = likedPages.stream()
+				.map(page -> LikeResponseDto.PageInfo.builder()
+						.pageId(page.getPageId())
+						.noteId(page.getNoteId())
+						.spaceId(noteRepository.findSpaceIdByNoteId(page.getNoteId()))
+						.template(page.getTemplate())
+						.color(page.getColor())
+						.direction(page.getDirection())
+						.pdfUrl(page.getPdfUrl())
+						.pdfPage(page.getPdfPage())
+						.createdAt(page.getCreatedAt())
+						.updatedAt(page.getUpdatedAt())
+						.build())
+				.toList();
+
+		return new LikeResponseDto(folderInfos, noteInfos, pageInfos);
 	}
 
 }
